syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "common.proto";
import "runtime.feed.proto";
import "runtime.package.proto";


message PluginLogRecord {
    enum LogSeverity {
        INFO = 0;
        ERROR = 1;
        TRADE = 2;
        TRADE_SUCCESS = 3;
        TRADE_FAIL = 4;
        CUSTOM = 5;
        ALERT = 6;
    }

    google.protobuf.Timestamp time_utc = 1;
    LogSeverity severity = 2;
    google.protobuf.StringValue message = 3;
    google.protobuf.StringValue details = 4;
}

message PluginStatusUpdate {
    string plugin_id = 1;
    google.protobuf.StringValue message = 2;
}

message OutputPointWire {
    enum Type {
        DOUBLE = 0;
        MARKER = 1;
    }

    int64 time = 1;
    double value = 2;
    Type type = 3;
    bytes metadata = 4;
}

message DataSeriesUpdate {
    enum Action {
        APPEND = 0;
        UPDATE = 1;
        RESET = 2;
    }
}

message OutputSeriesUpdate {
    google.protobuf.StringValue series_id = 1;
    DataSeriesUpdate.Action update_action = 2;
    repeated OutputPointWire points = 3;
    int32 buffer_truncated_by = 4;
}

message BarSeriesUpdate {
    enum Type {
        SYMBOL_RATE = 0;
        NAMED_STREAM = 1;
    }

    Type series_type = 1;
    google.protobuf.StringValue series_id = 2;
    DataSeriesUpdate.Action update_action = 3;
    BarData bar = 4;
}

message MarkerInfo {
    enum IconType {
        UNKNOWN_ICON_TYPE = 0;
        CIRCLE = 1;
        UP_ARROW = 2;
        DOWN_ARROW = 3;
        UP_TRIANGLE = 4;
        DOWN_TRIANGLE = 5;
        DIAMOND = 6;
        SQUARE = 7;
        WINGDINGS = 8;
    }

    google.protobuf.StringValue display_text = 1;
    IconType icon = 2;
    google.protobuf.UInt32Value color_argb = 3;
    uint32 icon_code = 4;
}


message BoolParameterConfig {
    string property_id = 1;
    bool value = 2;
}

message Int32ParameterConfig {
    string property_id = 1;
    int32 value = 2;
}

message NullableInt32ParameterConfig {
    string property_id = 1;
    google.protobuf.Int32Value value = 2;
}

message DoubleParameterConfig {
    string property_id = 1;
    double value = 2;
}

message NullableDoubleParameterConfig {
    string property_id = 1;
    google.protobuf.DoubleValue value = 2;
}

message StringParameterConfig {
    string property_id = 1;
    string value = 2;
}

message EnumParameterConfig {
    string property_id = 1;
    string value = 2;
}

message FileParameterConfig {
    string property_id = 1;
    string file_name = 2;
}


message SymbolConfig {
    enum SymbolOrigin {
        ONLINE = 0;
        CUSTOM = 1;
        TOKEN = 2;
    }

    string name = 1;
    SymbolOrigin origin = 2;
}

message BarToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message BarToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message ColoredLineOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.LineStyle line_style = 5;
}

message MarkerSeriesOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.MarkerSize marker_size = 5;
}

message PluginPermissions {
    bool trade_allowed = 1;
    bool isolated = 2;
}

message PluginConfig {
    PluginKey key = 1;
    Feed.Timeframe timeframe = 2;
    Feed.Timeframe model_timeframe = 3;
    SymbolConfig main_symbol = 4;
    MappingKey selected_mapping = 5;
    string instance_id = 6;
    PluginPermissions permissions = 7;
    repeated google.protobuf.Any properties = 8;
}